# fastLLMs-api

./: .flake8  .gitignore  Dockerfile  README.md  create_embeddings.py  ingest.py  main.py  pyproject.toml
.github/: pull_request_template.md
app/: main.py
core/: main.py  main_module.py
core/modules/: config.py  constants.py  embeddings_setup.py  llms_setup.py  vector_store_setup.py
local/: ingest.sh  now_run.sh
source_documents/: NotOkayIsOkay-tweets.csv
tests/: test_ingest.py  test_main.py
