[tool.poetry]
name = "fastllms-api"
version = "1.2.5"
description = "Deploying LLMs as an API"
authors = ["foscraft <anyaribari@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
langchain = "^0.0.325"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
black = "^23.10.1"
mypy = "^1.6.1"
pre-commit = "^3.5.0"
bandit = "^1.7.5"
isort = "^5.12.0"


[tool.poetry.group.tests.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
